--- a/api/package.json
+++ b/api/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "@types/pg": "^8.11.11",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
@@ -27,6 +30,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "3.3.2",
+    "prisma": "^6.4.1",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
@@ -34,5 +38,12 @@
   },
   "overrides": {
     "eslint": "^9.6.0"
+  },
+  "dependencies": {
+    "@dotenvx/dotenvx": "^1.37.0",
+    "@prisma/client": "^6.4.1",
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.2",
+    "pg": "^8.13.3"
   }
 }
