--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,5 +6,8 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "paths": {
+    "@/*": ["./src/*"]
+  }
 }
