--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,3 +1,6 @@
 node_modules
 dist
 .env
+
+prisma/migrations/*      # Ignore all migration files
+!prisma/migrations/migration_lock.toml  # Keep migration_lock.toml
