--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,10 @@
     "@eslint/js": "^9.6.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.11.11",
     "dotenv-cli": "^7.4.2",
@@ -43,7 +45,9 @@
     "@dotenvx/dotenvx": "^1.37.0",
     "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3"
   }
 }
