--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  db:
+  postgres:
     image: postgres:17
     environment:
       POSTGRES_USER: admin
@@ -18,11 +18,23 @@ services:
     ports:
       - "5050:80"
     depends_on:
-      - db
+      - postgres
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: always
 
+  caddy:
+    image: caddy:latest
+    ports:
+      - "5555:5555"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+      - ./static:/srv/static
+
 volumes:
   pgdata:
   pgadmin-data:
+  caddy_data:
+  caddy_config:
