added catalog page and set up seed script

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,10 +2,10 @@
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "prisma/**/*"],
   "exclude": ["node_modules", "dist"],
   "paths": {
     "@/*": ["./src/*"]
