--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "dev": "prisma migrate dev && dotenv -- nodemon",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint"
+    "lint": "eslint",
+    "prisma:seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
