move static files to Caddy

--- a/Caddyfile
+++ b/Caddyfile
@@ -2,4 +2,8 @@
     root * /srv/static
     file_server 
     header Access-Control-Allow-Origin *
+    log {
+        output stdout
+        format json
+    }
 }
