--- a/api/package.json
+++ b/api/package.json
@@ -45,10 +45,12 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.37.0",
     "@prisma/client": "^6.4.1",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.13.3",
     "zod": "^3.24.2"
   }
