fix statci server and some sections

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,4 @@
-DB_LOGIN=YOUR_DB_LOGIN
-DB_PASSWORD=YOUR_DB_PASSWORD
-DB_NAME=YOUR_DB_NAME
+PORT=
+DATABASE_URL=""
+JWT_SECRET=""
+JWT_EXPIRATION=""
