--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,19 +1,19 @@
-FROM node:22 AS builder
+FROM node:latest
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
-RUN npm ci
+COPY package*.json ./
+RUN npm install
 
 COPY . .
+
+ARG NEXT_PUBLIC_API_BASE_URL
+ARG NEXT_PUBLIC_STATIC_URL
+
+ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
+ENV NEXT_PUBLIC_STATIC_URL=$NEXT_PUBLIC_STATIC_URL
+
 RUN npm run build
-
-FROM node:22-alpine
-
-WORKDIR /app
-
-COPY --from=builder /app ./
-COPY --from=builder /app/node_modules ./node_modules
 
 EXPOSE 10000
 
