--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,11 +1,11 @@
 services:
   postgres:
     container_name: lp-postgres
-    image: postgres:17
+    image: postgres:${POSTGRES_VERSION:-17}
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: lucky_purchase
+      POSTGRES_USER: ${POSTGRES_USER:-admin}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-admin}
+      POSTGRES_DB: ${POSTGRES_DB:-lucky_purchase}
     ports:
       - "11111:11111"
     volumes:
@@ -15,30 +15,30 @@ services:
     build: ./api
     container_name: lp-api
     ports:
-      - "7777:7777"
+      - "${API_PORT_EXTERNAL:-7777}:${API_PORT_INTERNAL:-7777}"
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: "postgresql://admin:admin@lp-postgres:11111/lucky_purchase"
-      PORT: 7777
+      DATABASE_URL: "${DATABASE_URL:-postgresql://admin:admin@postgres:11111/lucky_purchase}"
+      PORT: ${API_PORT_INTERNAL:-7777}
+      JWT_SECRET: "${JWT_SECRET}"
     volumes:
       - ./api/static:/app/static
     restart: always
-
   web:
     build:
       context: ./web
       args:
-        - NEXT_PUBLIC_API_BASE_URL=https://lp-api.fly0utwest.dev
-        - NEXT_PUBLIC_STATIC_URL=https://lp-api.fly0utwest.dev/static/
+        - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+        - NEXT_PUBLIC_STATIC_URL=${NEXT_PUBLIC_STATIC_URL}
     container_name: lp-web
     ports:
-      - "10000:10000"
+      - "${WEB_PORT_EXTERNAL:-10000}:${WEB_PORT_INTERNAL:-10000}"
     depends_on:
       - api
     environment:
-      NEXT_PUBLIC_API_BASE_URL: "https://lp-api.fly0utwest.dev"
-      NEXT_PUBLIC_STATIC_URL: "https://lp-api.fly0utwest.dev/static/"
+      NEXT_PUBLIC_API_BASE_URL: "${NEXT_PUBLIC_API_BASE_URL}"
+      NEXT_PUBLIC_STATIC_URL: "${NEXT_PUBLIC_STATIC_URL}"
     volumes:
       - ./api/static:/app/static
     restart: always
