category and item category entities were added

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,4 +18,4 @@ RUN mkdir -p static/items
 
 EXPOSE 7777
 
-CMD ["sh", "-c", "npx prisma migrate deploy && node dist/src/index.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && npm run prisma:seed && node dist/src/index.js"]
