api-refactor: config folder now on root level

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  "include": ["src/**/*", "prisma/**/*"],
+  "include": ["src/**/*", "prisma/**/*", "config/db", "config/db.ts"],
   "exclude": ["node_modules", "dist"],
   "paths": {
     "@/*": ["./src/*"]
