--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "@tsconfig/node20": "^20.1.4",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.12",
@@ -46,7 +46,7 @@
     "@dotenvx/dotenvx": "^1.37.0",
     "@prisma/client": "^6.4.1",
     "@types/multer": "^1.4.12",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
