--- a/compose.yaml
+++ b/compose.yaml
@@ -20,6 +20,7 @@ services:
       DATABASE_URL: "${DATABASE_URL:-postgresql://admin:admin@postgres:5432/lucky_purchase}"
       PORT: ${API_PORT:-7777}
       JWT_SECRET: "${JWT_SECRET:-q9T5vi5Y/4rSrav0+dxRPrVSAlEwTed/SPwIOl53DVaW8ysGnDPaZqEjPM2w3AnFbFS7pAtQvkbYZJlOPFttDw==}"
+      NODE_ENV: "${NODE_ENV:-development}"
     volumes:
       - ./api/static:/app/static
     restart: always
@@ -37,6 +38,7 @@ services:
     environment:
       NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:7777}
       NEXT_PUBLIC_STATIC_URL: ${NEXT_PUBLIC_STATIC_URL:-http://localhost:7777/static/}
+      NODE_ENV: "${NODE_ENV:-development}"
     volumes:
       - ./api/static:/app/static
     restart: always
